<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.wesleyreisz.musicstore.MainActivity">
    <item
    android:id="@+id/action_home"
    android:orderInCategory="100"
    android:title="@string/action_home"
    app:showAsAction="always" />
    <item
        android:id="@+id/action_songs"
        android:orderInCategory="100"
        android:title="@string/action_songs"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_account"
        android:orderInCategory="100"
        android:title="@string/action_account"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_top"
        android:orderInCategory="100"
        android:title="@string/action_top"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_friends"
        android:orderInCategory="100"
        android:title="@string/action_friends"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
</menu>
